--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MAL-AutoSync-Manga",
   "version": "1.0.0",
-  "description": "A browser extension that scrobbles what you're watching with MyAnimeList",
+  "description": "A browser extension that scrobbles what you're reading with MyAnimeList",
   "repository": {
     "type": "git",
     "url": "https://github.com/myh1000/mal-autosync-manga"
