cahgne name and update icon

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MAL-AutoSync-Manga",
+  "name": "patchoulli-chan",
   "version": "1.0.0",
   "description": "A browser extension that scrobbles what you're reading with MyAnimeList",
   "repository": {
